--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SocksiPy"]
 	path = SocksiPy
-	url = git://github.com/mikedougherty/SocksiPy.git
+	url = git://github.com/Janhouse/SocksiPy.git
